// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

import "mesos/mesos.proto";

package mesos.quota;

option java_package = "org.apache.mesos.quota";
option java_outer_classname = "Protos";


/**
 * See v1 `QuotaInfo`.
 */
message QuotaInfo {
  optional string role = 1;
  optional string principal = 2;
  repeated Resource guarantee = 3;
}


/**
 * See v1 `QuotaRequest`.
 */
message QuotaRequest {
  optional bool force = 1 [default = false];
  optional string role = 2;
  repeated Resource guarantee = 3;
}


/**
 * See v1 `QuotaConfig`.
 */
message QuotaConfig {
  required string role = 1;

  map<string, Value.Scalar> guarantees = 2;
  map<string, Value.Scalar> limits = 3;
}


/**
 * See v1 `QuotaStatus`.
 */
message QuotaStatus {
  repeated QuotaInfo infos = 1 [deprecated = true];
  repeated QuotaConfig configs = 2;
}
